<resources>
    <string name="app_name">Memotion</string>
    <string name="dbName">Memotion</string>
    <string name="staff_email">usilab107@gmail.com</string>
    <string name="staff_email_pass"></string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="program_label"> Work **</string>
    <string name="faculty_label"> Faculty</string>
    <string name="age_label"> Age **</string>
    <string name="status_label"> Status **</string>
    <string name="course_label"> Course</string>
    <string name="gender_label"> Gender **</string>
    <string name="username_label">Username</string>
    <string name="empatica_label">Empatica ID</string>
    <string name="education_label">Education Level *</string>
    <string name="presenterQuestion">Are you presenting in the conference?</string>
    <string name="emptyString"> </string>
    <string name="selectItem">Select Item</string>
    <string name="teaching_experience_label">Teaching Experience</string>
    <string name="terms_conditions_agreement">Consent Form </string>
    <string name="professor">Professor</string>
    <string name="post_doc">Post-doc</string>
    <string name="phd_student">Ph.D. Student</string>
    <string name="assistant">Assistant</string>
    <string name="researcher">Researcher</string>
    <string name="student">Student</string>
    <string name="other">Other</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="range20to30">20-30</string>
    <string name="range30to40">30-40</string>
    <string name="range40to50">40-50</string>
    <string name="range50andAbove">50 and above</string>
    <string name="informatics">Informatics</string>
    <string name="economics">Economics</string>
    <string name="communication_sciences">Communication Sciences</string>
    <string name="academy_of_architecture">Academy of Architecture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="age_range_choices">
        <item>@string/selectItem</item>
        <item>@string/range20to30</item>
        <item>@string/range30to40</item>
        <item>@string/range40to50</item>
        <item>@string/range50andAbove</item>
    </string-array>
    <string-array name="faculty_title_choices">
        <item>@string/selectItem</item>
        <item>@string/informatics</item>
        <item>@string/economics</item>
        <item>@string/communication_sciences</item>
        <item>@string/academy_of_architecture</item>
    </string-array>
    <string-array name="work_title_choices">
        <item>@string/selectItem</item>
        <item>@string/academia</item>
        <item>@string/industry</item>
    </string-array>
    <string-array name="status_choices">
        <item>@string/selectItem</item>
        <item>@string/professor</item>
        <item>@string/post_doc</item>
        <item>@string/researcher</item>
        <item>@string/phd_student</item>
        <item>@string/assistant</item>
        <item>@string/student</item>
        <item>@string/other</item>
    </string-array>
    <string name="emptyLevel"> </string>
    <string name="academia">Academia</string>
    <string name="industry">Industry</string>
    <string name="daily_surveys_description">Surveys related to </string>
    <string name="lecture_surveys_description">Surveys related to the lectures</string>
    <string name="instructions">Please choose a number from 1 - 7 that best desribes your agreement with the following statements. \n 1=Strongly disagree - 7=Strongly agree</string>
    <string name="lecture_q1">This lecture was interesting.</string>
    <string name="lecture_q2">This lecture was exciting.</string>
    <string name="lecture_q3">This lecture was enjoyable.</string>
    <string name="lecture_q4">I lost track of the world while I was listening to this lecture.</string>
    <string name="lecture_q5">I still paid attention to my surroundings while I was listening the lecture.</string>
    <string name="lecture_q6">I was completely captivated by this lecture.</string>
    <string name="lecture_q7">What was your engagement level during this lecture?</string>
    <string name="lecture_q8">In your opinion, what was the engagement level of the instructor during this lecture?</string>
    <string name="lecture_q9">What was your attention level during this lecture?</string>
    <string name="lecture_q10">During which part of this lecture did you pay more attention? (i.e., first 15 minutes, last 15 minutes)</string>
    <string name="beginning">First</string>
    <string name="middle">Middle</string>
    <string name="end">Last</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>
    <string name="registration_survey_question">Could you please answer some questions?</string>
    <string name="about_this_study_sec_1_title">What is the study about?</string>
    <string name="about_this_study_sec_1">
        In the last century depression and mental health disorders among students and academics have been noted as a significantly increasing problem. Addressing this problem has become a key concern for several Universities.
        Recently a quite new branch of psychology, called positive psychology, rather than threating mental illness, has focused its attention more on personal growth and happiness. What is new with positive psychology is trying to make intervention to increase well-being since it has as side effect the decreasing of suffering. Happiness, also known as subjective wellbeing, has been defined as a combination of satisfaction of one\'s life with positive and negative emotional reactions.
        Positive psychology indicates that happiness can be affected and improved in different ways. Several daily external factors can contribute to the individual\'s overall well-being, such as physical activities, workload, mobility, social interaction, sleep quality,.. In order to improve our quality of life and increase our resilience to adversity, it\'s really important to keep track of their influence in our daily life. Traditionally well-being has been explored using questionnaires and interviews, this approach however presents several drawbacks, it\’s time consuming and difficult to manage in large scale. Nowadays people of different ages carry their smartphone all the time and interact with it several times per day. This makes smartphone an emerging and attractive option for collecting tones of daily data from users and environmental context, that can be analysed to get information of human\'s attitude, interests and health.
    </string>
    <string name="about_this_study_sec_2_title">Goal of the study</string>
    <string name="about_this_study_sec_2">
        This study belongs to a Master\’s thesis project. The main goal of the project is to investigate, using  smartphones, which are the main factors  that affect the well-being  and to which extent they contribute to  the participants\' happiness changes over time. Researchers have been shown that depression contribute to a reduction of mobility. Based on that we have decided to focus our attention mainly on the correlation between location information and well-being changes.
        During the data collection some feedbacks will be provided to the users which can become more aware of their well-being changes.
    </string>
    <string name="about_this_study_sec_3_title">Contacts</string>
    <string name="about_this_study_sec_3">Contact person if you  have questions about the study:</string>
    <string name="about_this_study_sec_3_email_1">Luca Dotti, luca.dotti@usi.ch</string>
    <string name="about_this_study_sec_3_email_2">Elena Di Lascio, elena.di.lascio@usi.ch</string>
    <string name="swls_instructions"> Below are five statements that you may agree or disagree with. Please pick a number from 1 (strongly disagree) to 7 (strongly agree) next to each statement to indicate the extent to which you agree or disagree with that statement. Please be open and honest in your responding.</string>
    <string name="swls_q1">In most ways my life is close to my ideal.</string>
    <string name="swls_q2">The conditions of my life are excellent.</string>
    <string name="swls_q3">I am satisfied with my life.</string>
    <string name="swls_q4">So far I have gotten the important things I want in life.</string>
    <string name="swls_q5">If I could live my life over, I would change almost nothing</string>
    <string name="daily_sleep_q1">Please indicate your bedtime:</string>
    <string name="daily_sleep_q2">Please indicate your wake-up time</string>
    <string name="daily_sleep_q3">Did you have any noctural awakening?:</string>
    <string name="daily_sleep_q4">Please indicate the quality of your sleep</string>
    <string name="fatigue_q1_option1">Fully alert, wide awake</string>
    <string name="fatigue_q1_option2">Very lively, responsive, but not at peak</string>
    <string name="fatigue_q1_option3">Okay, somewhat fresh</string>
    <string name="fatigue_q1_option4">A little tired, less than fresh</string>
    <string name="fatigue_q1_option5">Moderately tired, let down</string>
    <string name="fatigue_q1_option6">Extremely tired, very difficult to concentrate</string>
    <string name="fatigue_q1_option7">Completely exhausted, unable to function effectively</string>
    <string name="daily_overall_afternoon_q1">Overall, how would you rate this afternoon?</string>
    <string name="overall_option1">Really negative</string>
    <string name="overall_option2">Negative</string>
    <string name="overall_option3">Average</string>
    <string name="overall_option4">Positive</string>
    <string name="overall_option5">Really positive</string>
    <string name="productivity_afternoon_q1">Overall, how productive do you feel you were during the afternoon?</string>
    <string name="productivityq1_option1">Not at all productive</string>
    <string name="productivityq1_option2">Not very productive</string>
    <string name="productivityq1_option3">Somewhat unproductive</string>
    <string name="productivityq1_option4">Neither productive or unproductive</string>
    <string name="productivityq1_option5">Somewhat productive</string>
    <string name="productivityq1_option6">Very productive</string>
    <string name="productivityq1_option7">Extremely productive</string>
    <string name="productivity_afternoon_q2">Did you attend any academic activities(including classes, e-classes, sections, seminar, labs, study groups) this afternoon?</string>
    <string name="productivity_q3">If yes, how many?</string>
    <string name="productivity_afternoon_q4">How many hours did you study by yourself this afternoon (not including any academic activities in the previous question)?</string>
    <string name="stress_afternoon_q1">How did you feel during this afternoon?</string>
    <string name="stressq1_option1">Great!</string>
    <string name="stressq1_option2">Good</string>
    <string name="stressq1_option3">A little stressed</string>
    <string name="stressq1_option4">Definitely stressed</string>
    <string name="stressq1_option5">Stressed out!</string>
</resources>