<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productivity_afternoon_q1" />

        <RadioGroup
            android:id="@+id/productivity_afternoon_q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/productivity_afternoon_q1_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productivityq1_option1"/>
            <RadioButton
                android:id="@+id/productivity_afternoon_q1_option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productivityq1_option2"/>
            <RadioButton
                android:id="@+id/productivity_afternoon_q1_option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productivityq1_option3"/>
            <RadioButton
                android:id="@+id/productivity_afternoon_q1_option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productivityq1_option4"/>
            <RadioButton
                android:id="@+id/productivity_afternoon_q1_option5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productivityq1_option5"/>
            <RadioButton
                android:id="@+id/productivity_afternoon_q1_option6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productivityq1_option6"/>
            <RadioButton
                android:id="@+id/productivity_afternoon_q1_option7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productivityq1_option7"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productivity_afternoon_q2" />

        <RadioGroup
            android:id="@+id/productivity_afternoon_q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/productivity_afternoon_q2_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/productivity_afternoon_q2_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productivity_q3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productivity_afternoon_q3"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productivity_afternoon_q4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productivity_afternoon_q4"
            android:inputType="number"/>
    </LinearLayout>
</ScrollView>