<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fatigue_explanation"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fatigue_q1">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fatigue_q1_option1"
                android:text="@string/fatigue_q1_option1"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fatigue_q1_option2"
                android:text="@string/fatigue_q1_option2"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fatigue_q1_option3"
                android:text="@string/fatigue_q1_option3"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fatigue_q1_option4"
                android:text="@string/fatigue_q1_option4"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fatigue_q1_option5"
                android:text="@string/fatigue_q1_option5"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fatigue_q1_option6"
                android:text="@string/fatigue_q1_option6"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fatigue_q1_option7"
                android:text="@string/fatigue_q1_option7"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>