<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="About this study"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:gravity="center"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="17dp"
                android:textStyle="bold"
                android:paddingBottom="5dp"
                android:text="@string/about_this_study_sec_1_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/about_this_study_sec_1"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:paddingBottom="5dp"
                android:text="@string/about_this_study_sec_2_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/about_this_study_sec_2"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:paddingBottom="5dp"
                android:text="@string/about_this_study_sec_3_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/about_this_study_sec_3"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:paddingLeft="10dp"
                android:text="@string/about_this_study_sec_3_email_1"
                android:textIsSelectable="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:paddingLeft="10dp"
                android:text="@string/about_this_study_sec_3_email_2"
                android:textIsSelectable="true"/>
        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/study_okButton"
        android:text="Ok"/>
</LinearLayout>